--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,16 @@ language: ruby
 rvm:
 - 2.2.2
 
-# bundler_args: "--without development production"
+bundler_args: "--without development production"
 
 before_install:
   - gem update --system
   - gem --version
 
-
-# script:
+script:
 #   - bundle exec rake db:drop db:create db:migrate
-#   - bundle exec rspec spec
-#
+  - bundle exec rspec spec
+
 # deploy:
 #   provider: heroku
 #   api_key: #d2e20278-8dee-46f1-8eb1-4ee708916afe
