--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: ruby
 rvm:
-- 2.2.2
+- 2.2.3
 
 before_install:
   - gem update --system
   - gem --version
 
 script:
+  - bundle exec rake compile
   - bundle exec rake spec
